--- a/TODO_lista/style.css
+++ b/TODO_lista/style.css
@@ -1,42 +1,85 @@
-aside a {
-    background-color: #c5d5c5;
-    padding: 50px;
+html {
+    font-family: Verdana;
+}
+header {
+    background-color: green;
+    text-align: center;
+    border-radius: 15px;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+header a {
+    color: white;
+    clear: both;
+}
+main {
+    float: left;
+    border: 2px solid black;
+    width: 32%;
+    height: 800px;
     border-radius: 15px;
     margin: 2px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+aside {
+    float: left;
+    width: 33%;
+    border: 2px solid black;
+    height: 800px;
+    border-radius: 15px;
+    margin: 2px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+aside a {
+    padding: 50px;
+    border-radius: 15px;
     text-align: center;
+    border: 2px solid green;
+    color: black;
+}
+aside a:hover {
+    background-color: green;
+    color: white;
 }
 table, th, td {
     border: 1px solid black;
     border-collapse: collapse;
-    background-color: #c5d5c5;
-    border-radius: 15px;
-}
-main {
-    float: left;
-    background-color: #9fa9a3;
-    width: 50%;
-    height: 700px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-header {
     text-align: center;
-    background-color: #c5d5c5;
-    clear: both;
-    height: 60px;
-    font-size: 25px;
 }
-aside {
-    float: left;
-    background-color: #babca9;
-    height: 700px;
-    width: 25%;
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
+th {
+    background-color: green;
+    color: white;
 }
-a {
+input, select, textarea {
+    border: 2px solid green;
+    border-radius: 15px;
+    padding: 10px;
+}
+button {
+    background-color: green;
+    color: white;
+    border-radius: 15px;
+    border: 2px solid white;
+    padding: 20px;
+}
+button:hover {
+    border: 2px solid green;
     color: black;
+    background-color: white;
+}
+div {
+    border: 2px solid green;
+    border-radius: 15px;
+    margin: 10px;
+}
+hr {
+    border: 2px solid green;
+    width: 80%;
 }
